--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        header, footer { background-color: #333; color: white; text-align: center; padding: 1em; }
+        nav { text-align: center; margin-top: 1em; }
+        nav a { margin: 0 1em; }
+        .content { margin: 2em 10%; }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>Ridheesh Amarthya</p>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+    <div class="content">
+        <h2>Main Content</h2>
+        <p>This is the main area of the landing page. Here you can add your text, images, or other content.</p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Landing Page. All rights reserved.</p>
+    </footer>
 </body>
 </html>
