--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <a href="#">Contact</a>
     </nav>
     <div class="content">
-        <h2>Main Content</h2>
-        <p>This is the main area of the landing page. Here you can add your text, images, or other content.</p>
+        <h2>Ridheesh Amarthya</h2>
+        <p>This is the main area of the landing page.</p>
     </div>
     <footer>
-        <p>&copy; 2024 Landing Page. All rights reserved.</p>
+        <p>&copy; 2024 RidheeshAmarthya. All rights reserved.</p>
     </footer>
 </body>
 </html>
