--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="Assignment0-551290.css" />
+</head>
+
 <div id="gradient"></div>
 <div id="card">
   <img src="https://avatars.githubusercontent.com/u/58596633?v=4"/>
