--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -9,6 +9,7 @@
   <p>MS CS Student USC 2025</p>
   <p>CSCI 571 Web Tech</p>
   <p>https://github.com/RidheeshAmarthya</p>
+  <p>vridheesh@gmail.com</p>
   <span class="left bottom">tel: 213 619 8181</span>
-  <span class="right bottom">email: vridheesh@gmail.com | amarthya@usc.edu</span>
+  <span class="right bottom">email: amarthya@usc.edu</span>
 </div>
