--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -10,6 +10,8 @@
   <p>CSCI 571 Web Tech</p>
   <p>https://github.com/RidheeshAmarthya</p>
   <p>vridheesh@gmail.com</p>
+  <p>Section: 30378</p>
+  <p>ID: 6246811406</p>
   <span class="left bottom">tel: 213 619 8181</span>
   <span class="right bottom">email: amarthya@usc.edu</span>
 </div>
