--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -1,15 +1,35 @@
+<!DOCTYPE html>
+<html>
 <head>
-    <link rel="stylesheet" href="Assignment0-551290.css" />
+<style>
+table, th, td {
+  border: 5px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+}
+</style>
 </head>
+<body>
 
-<div id="gradient"></div>
-<div id="card">
-  <img src="https://avatars.githubusercontent.com/u/58596633?v=4"/>
-  <h2>Ridheesh Amarthya</h2>
-  <p>MS CS Student USC 2025</p>
-  <p>CSCI 571 Web Tech</p>
-  <p>https://github.com/RidheeshAmarthya</p>
-  <p>Section: 30378</p>
-  <p>ID: 6246811406</p>
-  <span class="left bottom">email: amarthya@usc.edu | vridheesh@gmail.com</span>
-</div>
+<table style="width:60%" align = "center">
+  <tr>
+    <td><a href= "ScrambleThisName.html">Link to Assignment #1</a></td>
+      <td></td>
+  </tr>
+    <tr>
+    <td><a href= "ScrambleThisName.html">Link to Assignment #2</a></td>
+    <td><a href= "ScrambleThisName.html">Link to Assignment #2 Cloud</a></td>    
+  </tr>
+  <tr>
+    <td><a href= "ScrambleThisName.html">Link to Assignment #3</a></td>
+    <td><a href= "ScrambleThisName.html">Link to Assignment #3 Cloud</a></td> 
+  </tr>
+  <tr>
+     <td></td>
+    <td><a href= "ScrambleThisName.html">Link to Assignment #4 Cloud</a></td> 
+  </tr>
+  </table>
+</body>
+</html>
