--- a/index.html
+++ b/index.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        header, footer { background-color: #333; color: white; text-align: center; padding: 1em; }
-        .content { margin: 2em 10%; }
-    </style>
+    <link rel="stylesheet" href="index.css" />
 </head>
-<body>
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
 
-    <div class="content">
-        <h2>Ridheesh Amarthya</h2>
-        <p>This is the main area of the landing page.</p>
-    </div>
-    <footer>
-        <p>&copy; 2024 RidheeshAmarthya. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+<div id="gradient"></div>
+<div id="card">
+  <img src="https://avatars.githubusercontent.com/u/58596633?v=4"/>
+  <h2>Ridheesh Amarthya</h2>
+  <p>MS CS Student USC 2025</p>
+  <p>CSCI 571 Web Tech</p>
+  <p>https://github.com/RidheeshAmarthya</p>
+  <p>Section: 30378</p>
+  <p>ID: 6246811406</p>
+  <span class="left bottom">email: amarthya@usc.edu | vridheesh@gmail.com</span>
+</div>
