--- a/Assignment1-551290.html
+++ b/Assignment1-551290.html
@@ -43,7 +43,7 @@
                 <div class="image-container">
                         <span class="button-text-img1">Turn the dream into a<br>reality</span>
                         <span class="button-text-img2">SERVICES</span>
-                        <button class="button-img1">Click Me</button>
+                        <button class="button-img1">Discover</button>
                         <img id="img1" src="Assets/Assignment1/flower.png" />
                     <img id="img2" src="Assets/Assignment1/image1.png" />
                 </div>
