--- a/Assignment1-551290.html
+++ b/Assignment1-551290.html
@@ -11,20 +11,20 @@
 			<div>
 				MAIN EVENTS
 			</div>
-			<div>
-				<a href="#" class="home-button">
+			<div class="'button">
+				<a href=page2.html class="home-button">
 					Home
 				</a>
-				<a href="#services">
+				<a href=page2.html>
 					Services
 				</a>
-				<a href="#about">
+				<a href=page2.html>
 					About
 				</a>
-				<a href="#gallery">
+				<a href=page2.html>
 					Gallery
 				</a>
-				<a href="#contact">
+				<a href=page2.html>
 					Contact
 				</a>
 			</div>
@@ -50,7 +50,7 @@
 			</div>
 			<div class="scroll-bg">
 				<div class="testimonial-section">
-					<a href="#" class="arrow left-arrow">
+					<a href=page2.html class="arrow left-arrow">
 						←
 					</a>
 					<div class="testimonial">
@@ -65,7 +65,7 @@
 							Jimmy and Janice
 						</p>
 					</div>
-					<a href="#" class="arrow right-arrow">
+					<a href=page2.html class="arrow right-arrow">
 						→
 					</a>
 				</div>
@@ -119,7 +119,7 @@
 						</p>
 					</div>
 					<div class="footer-cta-button">
-						<button onclick="location.href='#';">
+						<button onclick="location.href=page2.html;">
 							BOOK A CONSULTATION
 						</button>
 					</div>
