--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -15,7 +15,7 @@ th, td {
 
 <table style="width:60%" align = "center">
   <tr>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #1</a></td>
+    <td><a href= "https://ridheeshamarthya.github.io/Assignment1-551290.html">Link to Assignment #1</a></td>
       <td></td>
   </tr>
     <tr>
