--- a/Assignment1-551290.html
+++ b/Assignment1-551290.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="Assignment1.css" />
+		<link rel="stylesheet" href="Assignment1-551290.css" />
 		<title>
 			Assignment 1
 		</title>
