--- a/Assignment1-551290.html
+++ b/Assignment1-551290.html
@@ -12,19 +12,19 @@
 				MAIN EVENTS
 			</div>
 			<div class="'button">
-				<a href=page2.html class="home-button">
+				<a href=page2.html class="home-button" target="_blank">
 					Home
 				</a>
-				<a href=page2.html>
+				<a href=page2.html target="_blank">
 					Services
 				</a>
-				<a href=page2.html>
+				<a href=page2.html target="_blank">
 					About
 				</a>
-				<a href=page2.html>
+				<a href=page2.html target="_blank">
 					Gallery
 				</a>
-				<a href=page2.html>
+				<a href=page2.html target="_blank">
 					Contact
 				</a>
 			</div>
