--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -19,8 +19,8 @@ th, td {
       <td></td>
   </tr>
     <tr>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #2</a></td>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #2 Cloud</a></td>    
+    <td><a href= "ScrambleThisName.html">https://assignment2-flask.azurewebsites.net</a></td>
+    <td><a href= "ScrambleThisName.html">https://assignment2-flask.azurewebsites.net/Search?searchTerm=TSLA</a></td>    
   </tr>
   <tr>
     <td><a href= "ScrambleThisName.html">Link to Assignment #3</a></td>
