--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -23,8 +23,8 @@ th, td {
     <td><a href= "https://assignment2-551290.azurewebsites.net/Search?searchTerm=TSLA">Link to Assignment #2 Cloud</a></td>    
   </tr>
   <tr>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #3</a></td>
-    <td><a href= "ScrambleThisName.html">Link to Assignment #3 Cloud</a></td> 
+    <td><a href= "https://web-tech-assign-3.wl.r.appspot.com/search">Link to Assignment #3</a></td>
+    <td><a href= "https://assignment3-backend.azurewebsites.net/balance/66066e225c4da4de1832cc40">Link to Assignment #3 Cloud</a></td> 
   </tr>
   <tr>
      <td></td>
