--- a/Assignment0-551290.html
+++ b/Assignment0-551290.html
@@ -24,7 +24,7 @@ th, td {
   </tr>
   <tr>
     <td><a href= "https://web-tech-assign-3.wl.r.appspot.com/search">Link to Assignment #3</a></td>
-    <td><a href= "https://assignment3-backend.azurewebsites.net/balance/66066e225c4da4de1832cc40">Link to Assignment #3 Cloud</a></td> 
+    <td><a href= "https://assignment3-backend.azurewebsites.net/balance/">Link to Assignment #3 Cloud</a></td> 
   </tr>
   <tr>
      <td></td>
